--- a/products-server/package.json
+++ b/products-server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch database.json"
+    "start": "json-server --watch database.json",
+    "start-auth": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.1"
+    "json-server": "^0.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
