--- a/products-app/angular.json
+++ b/products-app/angular.json
@@ -13,6 +13,15 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "es": {
+            "translation": "src/locale/messages.es.xlf",
+            "baseHref": ""
+          }
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -61,6 +70,11 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "es": {
+              "localize": ["es"],
+              "outputPath": "dist/products-app-es/",
+              "i18nMissingTranslation": "error"
             }
           },
           "defaultConfiguration": "production"
@@ -73,7 +87,10 @@
             },
             "development": {
               "browserTarget": "products-app:build:development"
-            }
+            },
+            "es": {
+              "browserTarget": "products-app:build:es"
+            },
           },
           "defaultConfiguration": "development"
         },
