--- a/Hello/package.json
+++ b/Hello/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "products-app",
+  "name": "hello",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,13 +18,9 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@angular/localize": "^17.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    
-    "bootstrap": "^5.2.2",
-    "bootstrap-icons": "^1.10.2"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.10",
@@ -38,6 +34,5 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
-    
   }
 }
