--- a/customer-multimodule-app/package.json
+++ b/customer-multimodule-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:prod": "ng build --aot --vendor-chunk --common-chunk --delete-output-path --build-optimizer --output-hashing=all --source-map=false --named-chunks=false"
   },
   "private": true,
   "dependencies": {
