--- a/shared-lib/package.json
+++ b/shared-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customer-app",
+  "name": "shared-lib",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,13 +18,12 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "my-lib-mod": "file:../shared-lib/dist/my-lib-mod",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.10",
+    "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.10",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
@@ -34,6 +33,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.3.0",
     "typescript": "~5.4.2"
   }
 }
